# dlup

./: .clang-format  .gitignore  .gitignore 2  .gitmodules  .mypy.ini  .pre-commit-config 2.yaml  .pre-commit-config.yaml  .secrets.baseline  CITATION.cff  CMakeLists.txt  CONTRIBUTING 2.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  codecov.yml  meson.build  mypy.txt  polygons.ipynb  pyproject.toml  setup 2.cfg  setup.cfg  setup.py  test_data.py  tox.ini
.dev/: bump_date.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: black.yml  codecov.yml  mypy 2.yml  mypy.yml  pr-labels 2.yml  pr-labels.yml  pylint.yml  stale.yml  tox 2.yml  tox.yml
.spin/: cmds.py
dlup/: TiffMaskWriter.py  __init__.py  _background.pyi  _background.pyx  _cache.py  _exceptions.py  _experimental_annotation.py  _image.py  _libtiff_tiff_writer.py  _libtiff_tiff_writer.pyi  _region.py  annotations.py  background.py  background_deprecated.py  c_writers.py  cache.py  experimental_annotations.py  experimental_writers.py  logging.py  slide.py  tiling 2.py  tiling.py  tools.py  types.py  writers.py
dlup/backends/: __init__.py  _openslide.py  _pyvips.py  _tifffile.py  common.py  openslide_backend.py  pyvips_backend.py  remote_backends.py  slidescore_backend.py  tifffile_backend.py  v7_backend.py
dlup/cli/: __init__ 2.py  __init__.py  _wsi.py  mask.py  parsers.py  slidescore.py  utils.py  wsi.py
dlup/cli/slidescore/: __init__.py  download_labels.py  download_wsis.py  upload_labels.py
dlup/cli/wsi/: __init__.py  metadata.py  tiling.py
dlup/data/: __init__.py  _annotations.py  base_tile_dataset.py  dataset.py  transforms.py
dlup/data/experimental/: dataset.py
dlup/dataset/: wsi_dataset.py
dlup/dataset/utils/: read_qpdata.py
dlup/experimental_backends/: __init__.py  _openslide.py  _pyvips.py  _tifffile 2.py  _tifffile.py  common.py  deepzoom_backend.py  h5_backend.py  openslide_backend.py  pyvips.py  pyvips_backend.py  tifffile.py  tifffile_backend.py
dlup/preprocessors/: background.py  iterators.py  preprocessor.py  slide_manager.py
dlup/preprocessors/wsi/: preprocessor.py  slide_manager.py
dlup/transforms/: __init__.py  _helpers.py  helpers.py  histomicstk_xforms.py  normalize.py  staintools_xforms.py  torchvision_transforms.py  torchvision_transforms.py.j2  torchvision_xforms.py
dlup/transforms/tests/: __init__.py  test_helpers.py  test_torchvision_xforms.py
dlup/utils/: __init__ 2.py  __init__.py  annotations_utils.py  asserts.py  backends.py  bbox.py  cli.py  debug_utils.py  decorators.py  image.py  imports.py  io.py  logging.py  mask.py  pyvips.py  pyvips_utils.py  roi.py  slidescore.py  tifffile_utils.py  types.py  vips.py
dlup/utils/data/: dataloader.py  dataset.py
dlup/utils/tests/: __init__.py  test_slidescore.py
dlup/viz/: plotting 2.py  plotting.py
docker/: Dockerfile  Dockerfile 2  README 2.md  README.md  jupyter_notebook_config.py
docs/: Makefile  backends.rst  cli 2.rst  cli.rst  conf.py  dataset_examples.rst  examples.rst  index.rst  installation.rst  make.bat  quickstart 2.rst  quickstart.rst  readme.rst  tiling.rst  transforms.rst  usage.rst  writers.rst
docs/examples/: dataset_examples.rst  examples.rst  tile_directory.rst
docs/ext/: doi_role 2.py  doi_role.py
examples/: annotations.py  resample_image_to_tiff.py  resample_image_to_tiff_c.py  slidescore_conversion.py  test.py
scripts/: code_generator.sh
scripts/code_generators/: generate_torchvision_code.py
src/: constants.h  fast_tiff_writer.cpp  fast_tiff_writer.cpp.bak  fast_tiff_writer.cpp.bak2  image.h  libtiff_tiff_writer.cpp
tests/: common 2.py  common.py  conftest 2.py  conftest.py  infer_ann.py  leuke_test.py  mpp_test.py  new_test.py  test_annotations.py  test_backends.py  test_background.py  test_cache.py  test_cli.py  test_dataset.py  test_image.py  test_image2.py  test_logging.py  test_slide.py  test_tiling 2.py  test_tiling.py  test_transforms.py  test_utils.py  test_vips.py  test_writers.py
tests/backends/: test_backends.py  test_common.py  test_openslide_backend.py  test_tifffile_backend.py
tests/files/: 103S.json  HaloMultilayerTest.annotations  qupath05.geojson  raster.json
tests/files/.v7/: metadata.json
tests/utils/: __init__.py  test_imports.py  test_pyvips.py  test_tifffile.py  test_utils.py  test_vips.py
tools/: README.md  convert_for_qupath.py  convert_tiger_to_tcga.py  inspect_roi_dataset.py  mrxs_test2.py  tile_all_wsis_in_directory.sh  write-roi-dataset  write_annotated_roi_to_file.py  writers_benchmark.py
utils/: types.py
