# Example configuration for Black, edited for DLUP.

# NOTE: you have to use single-quoted strings in TOML for regular expressions.
# It's the equivalent of r-strings in Python.  Multiline strings are treated as
# verbose regular expressions by Black.  Use [ ] to denote a significant space
# character.

[tool.black]
line-length = 119 # PyCharm line length
target-version = ['py38', 'py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.idea
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.'TYPECHECK']
generated-members=['numpy.*', 'torch.*', 'np.*', 'cv2.*', 'openslide.*']

[tool.pylint.master]
extension-pkg-whitelist = ["dlup._background"]
ignore-patterns = '.*\.pyi'

[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "scikit-build>=0.13",
    "cmake>=3.18",
    "ninja",
    "Cython>=0.29",
    "numpy==1.26.4",
    "pybind11>=2.8.0"
]
build-backend = "setuptools.build_meta"

[tool.cython-lint]
max-line-length = 120

[tool.pytest.ini_options]
norecursedirs = ["_skbuild"]
