[bumpversion]
current_version = 0.3.32
commit = True
tag = False
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\-(?P<release>[a-z]+)(?P<build>\d+))?
serialize =
	{major}.{minor}.{patch}-{release}{build}
	{major}.{minor}.{patch}

[bumpversion:part:release]
optional_value = prod
first_value = dev
values =
	dev
	prod

[bumpversion:file:dlup/__init__.py]
search = {current_version}
replace = {new_version}

[bumpversion:file:README.md]
search = {current_version}
replace = {new_version}

[bumpversion:file:CITATION.cff]
search = {current_version}
replace = {new_version}

[aliases]
test = pytest

[options.package_data]
dlup = py.typed
